--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -5,11 +5,14 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine"
-    ]
+      "jasmine", "node"
+    ],
+    "composite": true,
+    "declaration": true
   },
   "include": [
     "src/**/*.d.ts",
-    "src/**/*.spec.ts"
+    "src/**/*.spec.ts",
+    "src/**/*.ts"
   ]
 }
