--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
               }
             ],
             "styles": [
+              "src/styles/bootstrap.scss",
               "src/styles.scss"
             ]
           },
@@ -88,6 +89,7 @@
               }
             ],
             "styles": [
+              "src/styles/bootstrap.scss",
               "src/styles.scss"
             ]
           }
